# hookaudit

./: .gitignore  README.md  hookaudit.py  pyproject.toml
examples/malicious/: .pre-commit-config.yaml
examples/malicious/.husky/: pre-commit
examples/secure/: .pre-commit-config.yaml
tests/: test_hookaudit.py
