[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hookaudit"
version = "0.1.0"
description = "Git Hook Security Auditor — scan hook configs for supply chain attack patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["git", "hooks", "security", "audit", "pre-commit", "supply-chain", "husky"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
hookaudit = "hookaudit:main"

[project.urls]
Homepage = "https://github.com/kriskimmerle/hookaudit"
Issues = "https://github.com/kriskimmerle/hookaudit/issues"
